--- a/default.hbs
+++ b/default.hbs
@@ -28,7 +28,7 @@
     <meta property="og:title" content="{{meta_title}}">
     <meta property="og:description" content="{{meta_description}}">
 
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+    <link rel="shortcut icon" href="{{asset "/favicon.ico"}}">
     <link rel="stylesheet" href="{{asset "js/styles/obsidian.css"}}">
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Linux+Libertine:400,400i,700,700i/Open+Sans:400,400i,700,700i">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
 </head>
 <body class="{{body_class}}">
 
-    <a href="{{@blog.url}}" class="logo-readium"><span class="logo" style="background-image: url({{@blog.logo}})"></span></a>
+    <a href="{{@blog.url}}" class="logo-seance"><span class="logo" style="background-image: url({{@blog.logo}})"></span></a>
     {{! Everything else gets inserted here }}
     {{{body}}}
 
