chore: fixed linkedin

--- a/index.hbs
+++ b/index.hbs
@@ -20,7 +20,7 @@
     <div class="custom-links">
         <a href="https://github.com/MaxJackson" target="_blank"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
         <a href="https://twitter.com/deadhorsepinata" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;
-        <a href="https://www.linkedin.com/in/maxjackson/en" target="_blank"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;·&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/max-jackson-77301125/" target="_blank"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;·&nbsp;&nbsp;
         <a href="/aboutme">who am i</a>&nbsp;&nbsp;·&nbsp;&nbsp;
     </div>
 </header>
